# labzero

./: index.html  pyproject.toml
src/labzero/: forms.py  models.py  settings.py  urls.py  views.py
src/labzero/cli/: init.py  main.py
src/labzero/fe/css/: app.css
src/labzero/fe/js/: main.js
src/labzero/templates/: base.html  dashboard.html  index.html  labzero_base.html
src/labzero/templates/labzero/: base.html  dashboard.html  index.html  login.html  profile_form.html  profile_form_htmx.html
tests/: conftest.py  test_profile.py
{{cookiecutter.project_name}}/: .gitignore
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: views.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/templates/: 500.html  index.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/templatetags/: custom_tags.py  my_tags.py
