[project]
name = "labzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kamal Mustafa", email = "kamal@koditi.my" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
